<resources>
    <string name="app_name">秒花钱包</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="user_service_agreement">隐私政策</string>
    <string name="privacy_policy">注册协议</string>
    <string name="login_title">欢迎使用秒花钱包</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="input_verification">请输入验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="login">登录</string>
    <string name="login_text">登录</string>
    <string name="login_forget">忘记密码?</string>
    <string name="store_info">门店信息</string>
    <string name="business_status">营业状态</string>
    <string name="save">保存</string>
    <string name="no_save">不保存</string>
    <string name="login_error">登录失败</string>
    <string name="search_filter">筛选</string>
    <string name="store_note">门店公告</string>
    <string name="store_phone">门店电话</string>
    <string name="please_input_hint_text">请输入座机或者手机号码</string>
    <string name="please_input_hint_text2">请输入正确的座机或者手机号码</string>
    <string name="verification_code">验证码校验</string>
    <string name="code_not_complate">验证码不完整</string>
    <string name="today">今日</string>
    <string name="tips_no_reservation">未来没有预约</string>
    <string name="take_phone">拨号</string>
    <string name="place_order_time">下单时间：</string>
    <string name="place_order_no">订单编号：</string>
    <string name="place_order_amount">订单金额：</string>
    <string name="go_to_verification">订单送达</string>
    <string name="get_to_verfication">取餐验证</string>
    <string name="no_order_now">暂无订单</string>
    <string name="order_type">订单类型</string>
    <string name="order_date">下单日期</string>
    <string name="order_all">全部</string>
    <string name="order_delivery">配送</string>
    <string name="order_self_pick">自取</string>
    <string name="order_today">今日</string>
    <string name="order_yesterday">昨日</string>
    <string name="order_customize">自定义</string>
    <string name="order_reset">重置</string>
    <string name="order_sure">确定</string>
    <string name="order_detail">订单详情</string>
    <string name="status_complete">已完成</string>
    <string name="goods_detail">商品信息</string>
    <string name="delivery_fee">配送费</string>
    <string name="give_away">赠品</string>
    <string name="order_info">订单信息</string>
    <string name="order_remark">订单备注：</string>
    <string name="order_attribution">订单归属：</string>
    <string name="tips_to_be_delivered">太饿了，请尽快配送嗷~</string>
    <string name="wait_for_customer">等待用户到店自取~</string>
    <string name="arrival_time">%s已送达</string>
    <string name="get_time">%s已取餐</string>
    <string name="arrival">送达</string>
    <string name="get_yourself">自取</string>
    <string name="order_search">搜索</string>
    <string name="refusal_of_refund">拒绝退款</string>
    <string name="agree_of_refund">同意退款</string>
    <string name="tips_agree_of_refund">你确定同意退款吗？</string>
    <string name="agree_of_cancel">取消订单</string>
    <string name="tips_agree_of_cancel">你确定取消订单吗？</string>
    <string name="refusal_of_reason">拒绝退款理由</string>
    <string name="refusal_reason">退款原因：</string>
    <string name="think_again">再想想</string>
    <string name="item_title_1">营业概览</string>
    <string name="actual_received">订单实收</string>
    <string name="should_received">营业额</string>
    <string name="order_count">订单数</string>
    <string name="order_refusal_count">退款订单</string>
    <string name="menu_management">菜单管理</string>
    <string name="evaluation_management">评价管理</string>
    <string name="marketing_management">营销管理</string>
    <string name="order_management">订单管理</string>
    <string name="goods_original_price">原\u3000价：</string>
    <string name="goods_personal_price">个人价：</string>
    <string name="goods_enterprise_price">企业价：</string>
    <string name="goods_shelves">上架</string>
    <string name="goods_take_off">下架</string>
    <string name="goods_shelves_text">你确定上架该商品吗？</string>
    <string name="goods_take_off_text">你确定下架该商品吗？</string>
    <string name="goods_think">再想想</string>
    <string name="goods_come_count">商品品种</string>
    <string name="goods_come_time">送达时间</string>
    <string name="goods_search_hint">商品搜索</string>
    <string name="time_spike">限时秒杀</string>
    <string name="goto_time_spike">点击进入限时秒杀页面</string>
    <string name="group">团购活动</string>
    <string name="goto_group">点击进入团购活动页面</string>
    <string name="please_open_the_location_manually">请手动打开定位!</string>
    <string name="location_permission">请手动开启定位权限!</string>
    <string name="storage_permission">请手动开启储存空间权限！</string>
    <string name="location_storage_permission">请手动开启定位和储存空间权限！</string>
    <string name="logout">退出账户</string>
    <string name="in_the_business">营业中</string>
    <string name="btn_in_business">营业</string>
    <string name="out_of_business">暂停营业</string>
    <string name="tips_in_business">当前处于营业状态</string>
    <string name="tips_outof_business">当前处于暂停营业状态</string>
    <string name="marketing_time">活动日期：</string>
    <string name="group_time">活动时间：</string>
    <string name="marketing_period">生效周期：</string>
    <string name="marketing_times">活动场次：</string>
    <string name="time_spike_num">秒杀商品品种：</string>
    <string name="group_num">团购商品品种：</string>
    <string name="arrivals_time">预计送达时间：</string>
    <string name="time_spike_title">秒杀商品（%d种）</string>
    <string name="quan_spike_title">满减券（%d种）</string>
    <string name="group_goods">团购商品（%d种）</string>
    <string name="marketing_detail">活动详情</string>
    <string name="activity_from">活动来源：</string>
    <string name="activity_to">活动对象：</string>
    <string name="activity_type">活动类型：</string>
    <string name="person">个人用户</string>
    <string name="enterprise">企业用户</string>
    <string name="all_user">全部用户</string>
    <string name="standard">规格：</string>
    <string name="sale_price">销售价格：</string>
    <string name="activity_price">活动价格：</string>
    <string name="min_buy">最低购买：</string>
    <string name="max_buy">最多购买：</string>
    <string name="activity_storage">活动库存：</string>
    <string name="goods_variety">商品品种：</string>
    <string name="arrivals_time_1">送达时间：</string>
    <string name="upper_shelf_time">自动上架时间：</string>
    <string name="menu_item_count">菜单商品（%d种）</string>
    <string name="refusal_info">退款信息</string>
    <string name="refusal_desc">退款说明：</string>
    <string name="refusal_no">退款编号：</string>
    <string name="menu_detail">菜单详情</string>
    <string name="details_description">商品描述</string>
    <string name="details_taste_high">最高购买数量:\u3000%s</string>
    <string name="details_taste_low">起卖数:\u3000%d</string>
    <string name="details_limit">购买限制</string>
    <string name="details_taste">口味:</string>
    <string name="specification_list">规格:</string>
    <string name="details_type">分类:%s</string>
    <string name="details_info_title">商品信息</string>
    <string name="details_goods_title">商品详情</string>
    <string name="person_price">个人价</string>
    <string name="enterprise_price">企业价</string>
    <string name="original_price">销售价</string>
    <string name="order_price">订单金额：</string>
    <string name="order_ping">总评分</string>
    <string name="order_wei">味道</string>
    <string name="order_bao">包装</string>
    <string name="order_fu">服务</string>
    <string name="order_evl_biao">评价标签</string>
    <string name="order_evl_title">评价管理</string>
    <string name="order_evl_zhuang">评价状态</string>
    <string name="order_evl_reply">回复情况</string>
    <string name="order_evl_ri">评价日期</string>
    <string name="tags_praise">好评</string>
    <string name="tags_average">中评</string>
    <string name="tags_negative_ratings">差评</string>
    <string name="evl_hide">隐藏</string>
    <string name="evl_show">显示</string>
    <string name="evl_reply">回复</string>
    <string name="evl_order_number">订单编号：%s</string>
    <string name="evl_tags">已隐藏</string>
    <string name="evl_go_show">你确定显示此评价吗？</string>
    <string name="evl_go_hide">你确定隐藏此评价吗？</string>
    <string name="title_sales_model">售卖模式</string>
    <string name="choose_sales_model">请选择售卖商品模式</string>
    <string name="goods_sales_model">商品售卖模式</string>
    <string name="menu_sales_model">菜单售卖模式</string>
    <string name="order_by_product">顾客按商品下单</string>
    <string name="order_by_menu">顾客按菜单下单</string>
    <string name="hint_sales_model">商户在营业中改变销售模式，将影响顾客下单，请在暂停营业中调整模式。</string>
    <string name="house_number">门牌号</string>
    <string name="please_enter_house_number">请输入门牌号</string>
    <string name="only_distribution">仅配送</string>
    <string name="only_self_pick_up">仅自提</string>
    <string name="company">企业</string>
    <string name="personal">个人</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="scope_of_delivery">配送范围(米)</string>
    <string name="shipping_price">配送价格(元)</string>
    <string name="order_full">订单满(元)\u3000</string>
    <string name="distribution_rule">配送规则</string>
    <string name="tips_add_up_3">最多添加3个时段</string>
    <string name="tips_starttime_canot_late">开始时间不能晚于结束时间</string>
    <string name="tips_endtime_canot_early">结束时间不能早于开始时间</string>
    <string name="business_configuration">业务配置</string>
    <string name="sales_model">售卖模式</string>
    <string name="hint_fill_price">请填写价格(元)</string>
    <string name="delivery_min">起送</string>
    <string name="add_new_time_interval">新增时间段</string>
    <string name="tips_save_success">保存成功！</string>
    <string name="tips_delivery_1">请填写配送范围</string>
    <string name="tips_delivery_2">请填写配送价格</string>
    <string name="tips_delivery_3">请输入免单金额</string>
    <string name="tips_delivery_4">请输入起送金额</string>
    <string name="self_pick_reward">自提奖励</string>
    <string name="choolse_reward_goodd">选择赠送商品</string>
    <string name="self_pick_time_interval">自提时间范围</string>
    <string name="self_mention_time_interval">配送时间范围</string>
    <string name="self_pick_rule">自提规则</string>
    <string name="support_business">支持业务</string>
    <string name="delivery_target">配送对象</string>

    <string name="log_out_of_the_account">确定退出该账户？</string>
    <string name="determine_the_switching_state">确定切换营业状态？</string>
    <string name="confirm_the_unbundling">确定解绑该自提点？</string>

    <string name="price_char">价    值：</string>
    <string name="storage_char">当前库存：</string>
    <string name="commodity_earch">请输入赠品名称</string>
    <string name="gift_title">&#160;&#160;&#160;赠送商品</string>
    <string name="sure_address">确定地址</string>
    <string name="save_fail">保存失败</string>
    <string name="update_fail">修改失败</string>
    <string name="update_success">修改成功</string>
    <string name="shop_address">门店地址</string>
    <string name="shop_pic">门店照片</string>
    <string name="register_phone">注册手机</string>
    <string name="hint_update_img">图片不低于160*160像素</string>
    <string name="shop_logo">门店logo</string>
    <string name="time_is_running_out">时间已排满</string>
    <string name="tips_can_not_early">必须晚于之前的时段</string>
    <string name="tips_can_not_late">必须早于以后的时段</string>
    <string name="search_hint_1">请输入商品名称</string>
    <string name="search_hint_2">请输入订单号或手机号</string>
    <string name="choose_shop_address">请选择店铺地址</string>
    <string name="tips_open_group">开启虚拟成团</string>
    <string name="tips_close_group">取消虚拟成团</string>
    <string name="open_success">开启成功</string>
    <string name="store_info_address_hint">自提点名称或手机</string>
    <string name="close_success">取消成功</string>
    <string name="hint_fill_store_announcement">请输入内容～</string>
    <string name="tableware">%d份餐具</string>
</resources>
