<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/login_title"
            android:textColor="@color/text_normal_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/lpfyusrtyusr" />

            <EditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/input_phone_number"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/text_normal_color"
                android:textColorHint="#999999"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/textSize_16" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@color/dividing" />

        <LinearLayout
            android:id="@+id/verification_ll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/zgbrdtyrstu" />

            <EditText
                android:id="@+id/verification_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/input_verification"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/text_normal_color"
                android:textColorHint="#999999"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/textSize_16" />

            <TextView
                android:id="@+id/get_verification_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:background="@drawable/shape_login_btn_bg"
                android:gravity="center"
                android:paddingEnd="10dp"
                android:text="@string/get_verification"
                android:textColor="@color/white" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@color/dividing" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/shape_login_btn_bg"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remind_cb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:button="@drawable/checkbox_bg" />

            <com.jinyu.xiaopu.fenfujiewidget.FenFuJieSpanTextView
                android:id="@+id/login_remind_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/text_normal_color"
                android:textSize="@dimen/textSize_16" />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/loading_fen_fu_jie_layout" />

</FrameLayout>