<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <cn.droidlover.xstatecontroller.XStateController
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/q" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                android:text="@string/login_title"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.lihang.ShadowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                app:hl_layoutBackground="@color/white"
                app:hl_cornerRadius="50dp"
                app:hl_shadowColor="#2a000000"
                app:hl_shadowLimit="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/d" />

                    <EditText
                        android:id="@+id/mobile_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:hint="@string/input_phone_number"
                        android:inputType="number"
                        android:maxLength="11"
                        android:textColor="@color/text_normal_color"
                        android:textColorHint="#9a9a9a"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/textSize_16" />

                </LinearLayout>

            </com.lihang.ShadowLayout>>

            <com.lihang.ShadowLayout
                android:id="@+id/yzm_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                app:hl_layoutBackground="@color/white"
                app:hl_cornerRadius="50dp"
                app:hl_shadowColor="#2a000000"
                app:hl_shadowLimit="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:padding="3dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/c" />

                    <EditText
                        android:id="@+id/yzm_et"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:hint="@string/input_verification"
                        android:inputType="number"
                        android:maxLength="6"
                        android:textColor="@color/text_normal_color"
                        android:textColorHint="#9a9a9a"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/textSize_16" />

                    <TextView
                        android:id="@+id/get_yzm_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/dp_15"
                        android:paddingTop="8dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="8dp"
                        android:text="@string/get_verification"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

            </com.lihang.ShadowLayout>

            <com.lihang.ShadowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                app:hl_cornerRadius="50dp"
                app:hl_endColor="#5e11eb"
                app:hl_startColor="#e31fdb">

                <TextView
                    android:id="@+id/dl_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSize_16" />

            </com.lihang.ShadowLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/remind_cb"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:button="@drawable/checkbox_bg" />

                <com.aklsfasad.fsjhfkk.w.ClickTextView
                    android:id="@+id/read_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/text_normal_color"
                    android:textSize="@dimen/textSize_16" />

            </LinearLayout>

        </LinearLayout>

    </cn.droidlover.xstatecontroller.XStateController>

</FrameLayout>