<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:paddingTop="35dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="53dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:paddingHorizontal="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/order_all" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="29dp"
            android:checked="false"
            android:paddingHorizontal="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/company" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="29dp"
            android:paddingHorizontal="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/personal" />
    </RadioGroup>

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:src="@drawable/aa" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="53dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:paddingHorizontal="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/order_all" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="29dp"
            android:checked="false"
            android:paddingHorizontal="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/company" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="29dp"
            android:paddingHorizontal="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/personal" />
    </RadioGroup>

    <TextView
        android:id="@+id/biaoti_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="53dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:paddingHorizontal="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/order_all" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="29dp"
            android:checked="false"
            android:paddingHorizontal="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/company" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="29dp"
            android:paddingHorizontal="3dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/personal" />
    </RadioGroup>
</FrameLayout>